[package]
name = "quartz_proxy"
version = "0.1.0"
edition = "2018"

[dependencies]
async-channel = "1.6.1"
async-executor = "1.4.1"
async-io = "1.6.0"
async-lock = "2.4.0"
futures-lite = "1.12.0"
linefeed = "0.6.0"
log = "0.4.14"
once_cell = "1.8.0"
quartz = { path = "../Quartz/quartz" }
quartz_commands = "0.1"

[profile.release]
debug = 2